# MyLittleAboba

./: 18_784_150_26_26_correctly_passed_10507tests.txt  4_784_128_128_26_correctly_passed_11867tests.txt  ActivationFunction.h  BlackBox.cc  BlackBox.h  CMakeLists.txt  MLP.cc  MLP.h  MLPmatrix.h  MLayer.h  Makefile  README.md  TrainingConfig.h  TrainingGround.cc  TrainingGround.h  dataloader.cc  dataloader.h  main.cc  main.cpp  mlp_matrix.h  s21_matrix_oop.cc  s21_matrix_oop.h  sigmoid_784_128_128_26_correctly_passed_11867tests.txt
Configs/: elu_784_128_128_26_correctly_passed_84.807720%_of_14800tests.txt  elu_784_256_26_correctly_passed_84.939319%_of_14800tests.txt  log.txt
Controller/: MLPController.h  SettingsController.h
Model/: Dataloader.cc  Dataloader.h  MLPBuilder.cc  MLPBuilder.h  MLPCore.cc  MLPCore.h  MLPInteraface.h  TrainingConfig.h  TrainingGround.cc  TrainingGround.h  log.txt  relu_784_128_128_26_correctly_passed_84.398304%_of_14800tests.txt
Model/GraphMLP/: GLayer.cc  GLayer.h  GraphMLP.cc  GraphMLP.h
Model/MatrixMLP/: MLP.h  MLayer.h  MatrixMLP.cc  MatrixMLP.h
Utility/: ActivationFunction.cc  ActivationFunction.h  MLPmatrix.h  Matrix.h
View/: DrawingWindow.cc  DrawingWindow.h  TrainingSchedule.cc  TrainingSchedule.h  TrainingSchedule.ui  aboba.cc  aboba.h  aboba.ui  mainwindow.cc  mainwindow.h  mainwindow.ui
saved configs/: elu_784_128_128_26_correctly_passed_12538tests.txt  leakyrelu_784_128_128_26_correctly_passed_12304tests.txt  log.txt  relu_784_128_128_26_correctly_passed_12453tests.txt  relu_784_128_128_26_correctly_passed_12589tests.txt  sigmoid_784_128_128_26_correctly_passed_12143tests.txt  tanh_784_128_128_26_correctly_passed_12331tests.txt
